--- a/style.css
+++ b/style.css
@@ -76,8 +76,8 @@ h1.book {
 
 h2 {
   color: #1481b8;
-  font: 300 35px "Source Sans Pro", Georgia, serif;
-  margin: 20px 0 15px -38px;
+  font: 300 20px "Source Sans Pro", Georgia, serif;
+  margin: 20px 0 5px -38px;
   padding: 0 0 2px 30px;
   border-left: solid 8px #d9eaf2; }
 
@@ -104,7 +104,7 @@ ol[type="I"] {
 
 a {
   color: #003399;
-  text-decoration: underline;
+  text-decoration: none;
   outline: none;
   border-bottom: solid 1px rgba(209, 236, 250, 0);
   transition: color 0.2s ease, border-color 0.2s ease; }
@@ -270,7 +270,7 @@ footer {
     content: ""; }
 
   h2 {
-    font-size: 25px;
+    font-size: 18px;
     margin-left: -18px;
     padding-left: 10px;
     border-left: solid 6px #d9eaf2; }
